tests/ui/use/use-path-segment-kw.stderr
error: crate root imports need to be explicitly named: `use crate as name;`
  --> $DIR/use-path-segment-kw.rs:93:13
   |
LL |         use crate;
   |             ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:97:15
   |
LL |         use ::crate;
   |               ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:98:15
   |
LL |         use ::crate as _crate2;
   |               ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:99:16
   |
LL |         use ::{crate};
   |                ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:100:16
   |
LL |         use ::{crate as _nested_crate2};
   |                ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:103:21
   |
LL |         use foobar::crate;
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:104:21
   |
LL |         use foobar::crate as _crate3;
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:105:22
   |
LL |         use foobar::{crate};
   |                      ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:106:22
   |
LL |         use foobar::{crate as _nested_crate3};
   |                      ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:109:20
   |
LL |         use crate::crate;
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:110:20
   |
LL |         use crate::crate as _crate4;
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:111:21
   |
LL |         use crate::{crate};
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:112:21
   |
LL |         use crate::{crate as _nested_crate4};
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:115:20
   |
LL |         use super::crate;
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:116:20
   |
LL |         use super::crate as _crate5;
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:117:21
   |
LL |         use super::{crate};
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:118:21
   |
LL |         use super::{crate as _nested_crate5};
   |                     ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:121:19
   |
LL |         use self::crate;
   |                   ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:122:19
   |
LL |         use self::crate as _crate6;
   |                   ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:123:20
   |
LL |         use self::{crate};
   |                    ^^^^^

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:124:20
   |
LL |         use self::{crate as _nested_crate6};
   |                    ^^^^^

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:131:13
   |
LL |         use super;
   |             ^^^^^
   |
help: try renaming it with a name
   |
LL |         use super as name;
   |                   +++++++

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:135:15
   |
LL |         use ::super;
   |               ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:136:15
   |
LL |         use ::super as _super2;
   |               ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:137:16
   |
LL |         use ::{super};
   |                ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:138:16
   |
LL |         use ::{super as _nested_super2};
   |                ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:141:21
   |
LL |         use foobar::super;
   |                     ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:142:21
   |
LL |         use foobar::super as _super3;
   |                     ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:143:22
   |
LL |         use foobar::{super};
   |                      ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:144:22
   |
LL |         use foobar::{super as _nested_super3};
   |                      ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:147:20
   |
LL |         use crate::super;
   |                    ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:148:20
   |
LL |         use crate::super as _super4;
   |                    ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:149:21
   |
LL |         use crate::{super};
   |                     ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:150:21
   |
LL |         use crate::{super as _nested_super4};
   |                     ^^^^^

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:153:20
   |
LL |         use super::super;
   |                    ^^^^^
   |
help: try renaming it with a name
   |
LL |         use super::super as name;
   |                          +++++++

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:155:21
   |
LL |         use super::{super};
   |                     ^^^^^
   |
help: try renaming it with a name
   |
LL |         use super::{super as name};
   |                           +++++++

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:159:19
   |
LL |         use self::super;
   |                   ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:160:19
   |
LL |         use self::super as _super6;
   |                   ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:161:20
   |
LL |         use self::{super};
   |                    ^^^^^

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:162:20
   |
LL |         use self::{super as _nested_super6};
   |                    ^^^^^

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:169:13
   |
LL |         use self;
   |             ^^^^

error: crate root cannot be imported
  --> $DIR/use-path-segment-kw.rs:173:13
   |
LL |         use ::self;
   |             ^^^^^^

error: crate root cannot be imported
  --> $DIR/use-path-segment-kw.rs:174:13
   |
LL |         use ::self as _self2;
   |             ^^^^^^^^^^^^^^^^

error: crate root cannot be imported
  --> $DIR/use-path-segment-kw.rs:175:16
   |
LL |         use ::{self};
   |                ^^^^

error: crate root cannot be imported
  --> $DIR/use-path-segment-kw.rs:176:16
   |
LL |         use ::{self as _nested_self2};
   |                ^^^^^^^^^^^^^^^^^^^^^

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:179:28
   |
LL |         pub use foobar::qux::self;
   |                            ^^^^^^
   |
help: consider importing the module directly
   |
LL -         pub use foobar::qux::self;
LL +         pub use foobar::qux;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         pub use foobar::qux::{self};
   |                              +    +

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:180:23
   |
LL |         pub use foobar::self as _self3;
   |                       ^^^^^^
   |
help: consider importing the module directly
   |
LL -         pub use foobar::self as _self3;
LL +         pub use foobar as _self3;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         pub use foobar::{self as _self3};
   |                         +              +

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:185:18
   |
LL |         use crate::self;
   |                  ^^^^^^
   |
help: consider importing the module directly
   |
LL -         use crate::self;
LL +         use crate;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         use crate::{self};
   |                    +    +

error: crate root imports need to be explicitly named: `use crate as name;`
  --> $DIR/use-path-segment-kw.rs:185:20
   |
LL |         use crate::self;
   |                    ^^^^

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:187:22
   |
LL |         pub use crate::self as _self4;
   |                      ^^^^^^
   |
help: consider importing the module directly
   |
LL -         pub use crate::self as _self4;
LL +         pub use crate as _self4;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         pub use crate::{self as _self4};
   |                        +              +

error: crate root imports need to be explicitly named: `use crate as name;`
  --> $DIR/use-path-segment-kw.rs:188:21
   |
LL |         use crate::{self};
   |                     ^^^^

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:192:18
   |
LL |         use super::self;
   |                  ^^^^^^
   |
help: consider importing the module directly
   |
LL -         use super::self;
LL +         use super;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         use super::{self};
   |                    +    +

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:192:20
   |
LL |         use super::self;
   |                    ^^^^

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:194:22
   |
LL |         pub use super::self as _self5;
   |                      ^^^^^^
   |
help: consider importing the module directly
   |
LL -         pub use super::self as _self5;
LL +         pub use super as _self5;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         pub use super::{self as _self5};
   |                        +              +

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:195:21
   |
LL |         use super::{self};
   |                     ^^^^
   |
help: try renaming it with a name
   |
LL |         use super::{self as name};
   |                          +++++++

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:199:17
   |
LL |         use self::self;
   |                 ^^^^^^
   |
help: consider importing the module directly
   |
LL -         use self::self;
LL +         use self;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         use self::{self};
   |                   +    +

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:199:19
   |
LL |         use self::self;
   |                   ^^^^

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:201:21
   |
LL |         pub use self::self as _self6;
   |                     ^^^^^^
   |
help: consider importing the module directly
   |
LL -         pub use self::self as _self6;
LL +         pub use self as _self6;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         pub use self::{self as _self6};
   |                       +              +

error: imports need to be explicitly named
  --> $DIR/use-path-segment-kw.rs:202:20
   |
LL |         use self::{self};
   |                    ^^^^
   |
help: try renaming it with a name
   |
LL |         use self::{self as name};
   |                         +++++++

error: `$crate` may not be imported
  --> $DIR/use-path-segment-kw.rs:9:13
   |
LL |         use $crate;
   |             ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:13:15
   |
LL |         use ::$crate;
   |               ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:14:15
   |
LL |         use ::$crate as _dollar_crate2;
   |               ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:15:16
   |
LL |         use ::{$crate};
   |                ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:16:16
   |
LL |         use ::{$crate as _nested_dollar_crate2};
   |                ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:19:21
   |
LL |         use foobar::$crate;
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:20:21
   |
LL |         use foobar::$crate as _dollar_crate3;
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:21:22
   |
LL |         use foobar::{$crate};
   |                      ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:22:22
   |
LL |         use foobar::{$crate as _nested_dollar_crate3};
   |                      ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:25:20
   |
LL |         use crate::$crate;
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:26:20
   |
LL |         use crate::$crate as _dollar_crate4;
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:27:21
   |
LL |         use crate::{$crate};
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:28:21
   |
LL |         use crate::{$crate as _nested_dollar_crate4};
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:31:20
   |
LL |         use super::$crate;
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:32:20
   |
LL |         use super::$crate as _dollar_crate5;
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:33:21
   |
LL |         use super::{$crate};
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:34:21
   |
LL |         use super::{$crate as _nested_dollar_crate5};
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:37:19
   |
LL |         use self::$crate;
   |                   ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:38:19
   |
LL |         use self::$crate as _dollar_crate6;
   |                   ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:39:20
   |
LL |         use self::{$crate};
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:40:20
   |
LL |         use self::{$crate as _nested_dollar_crate6};
   |                    ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:43:21
   |
LL |         use $crate::$crate;
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:44:21
   |
LL |         use $crate::$crate as _dollar_crate7;
   |                     ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:45:22
   |
LL |         use $crate::{$crate};
   |                      ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:46:22
   |
LL |         use $crate::{$crate as _nested_dollar_crate7};
   |                      ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:49:21
   |
LL |         use $crate::crate;
   |                     ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:50:21
   |
LL |         use $crate::crate as _m_crate8;
   |                     ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:51:22
   |
LL |         use $crate::{crate};
   |                      ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:52:22
   |
LL |         use $crate::{crate as _m_nested_crate8};
   |                      ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:55:21
   |
LL |         use $crate::super;
   |                     ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:56:21
   |
LL |         use $crate::super as _m_super8;
   |                     ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:57:22
   |
LL |         use $crate::{super};
   |                      ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `super` in paths can only be used in start position or after another `super`
  --> $DIR/use-path-segment-kw.rs:58:22
   |
LL |         use $crate::{super as _m_nested_super8};
   |                      ^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:61:19
   |
LL |         use $crate::self;
   |                   ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing the module directly
   |
LL -         use $crate::self;
LL +         use $crate;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         use $crate::{self};
   |                     +    +

error: `$crate` may not be imported
  --> $DIR/use-path-segment-kw.rs:61:21
   |
LL |         use $crate::self;
   |                     ^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0429]: `self` imports are only allowed within a { } list
  --> $DIR/use-path-segment-kw.rs:63:23
   |
LL |         pub use $crate::self as _m_self8;
   |                       ^^^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing the module directly
   |
LL -         pub use $crate::self as _m_self8;
LL +         pub use $crate as _m_self8;
   |
help: alternatively, use the multi-path `use` syntax to import `self`
   |
LL |         pub use $crate::{self as _m_self8};
   |                         +                +

error: `$crate` may not be imported
  --> $DIR/use-path-segment-kw.rs:64:22
   |
LL |         use $crate::{self};
   |                      ^^^^
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0573]: expected type, found module `$crate`
  --> $DIR/use-path-segment-kw.rs:8:19
   |
LL |         type A1 = $crate;
   |                   ^^^^^^ not a type
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0573]: expected type, found module `crate`
  --> $DIR/use-path-segment-kw.rs:92:19
   |
LL |         type B1 = crate;
   |                   ^^^^^ not a type

error[E0573]: expected type, found module `super`
  --> $DIR/use-path-segment-kw.rs:130:19
   |
LL |         type C1 = super;
   |                   ^^^^^ not a type

error[E0573]: expected type, found module `super::super`
  --> $DIR/use-path-segment-kw.rs:152:19
   |
LL |         type C5 = super::super;
   |                   ^^^^^^^^^^^^ not a type

error[E0573]: expected type, found module `self::super`
  --> $DIR/use-path-segment-kw.rs:158:19
   |
LL |         type C6 = self::super;
   |                   ^^^^^^^^^^^ not a type

error[E0573]: expected type, found module `self`
  --> $DIR/use-path-segment-kw.rs:168:19
   |
LL |         type D1 = self;
   |                   ^^^^ not a type

error[E0433]: failed to resolve: global paths cannot start with `$crate`
  --> $DIR/use-path-segment-kw.rs:12:21
   |
LL |         type A2 = ::$crate;
   |                     ^^^^^^ global paths cannot start with `$crate`
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:18:27
   |
LL |         type A3 = foobar::$crate;
   |                           ^^^^^^ `$crate` in paths can only be used in start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:24:26
   |
LL |         type A4 = crate::$crate;
   |                          ^^^^^^ `$crate` in paths can only be used in start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:30:26
   |
LL |         type A5 = super::$crate;
   |                          ^^^^^^ `$crate` in paths can only be used in start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:36:25
   |
LL |         type A6 = self::$crate;
   |                         ^^^^^^ `$crate` in paths can only be used in start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: `$crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:42:27
   |
LL |         type A7 = $crate::$crate;
   |                           ^^^^^^ `$crate` in paths can only be used in start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:48:27
   |
LL |         type A8 = $crate::crate;
   |                           ^^^^^ `crate` in paths can only be used in start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: `super` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:54:27
   |
LL |         type A9 = $crate::super;
   |                           ^^^^^ `super` in paths can only be used in start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:60:28
   |
LL |         type A10 = $crate::self;
   |                            ^^^^ `self` in paths can only be used in start position
...
LL |         macro_dollar_crate!();
   |         --------------------- in this macro invocation
   |
   = note: this error originates in the macro `macro_dollar_crate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: global paths cannot start with `crate`
  --> $DIR/use-path-segment-kw.rs:96:21
   |
LL |         type B2 = ::crate;
   |                     ^^^^^ global paths cannot start with `crate`

error[E0433]: failed to resolve: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:102:27
   |
LL |         type B3 = foobar::crate;
   |                           ^^^^^ `crate` in paths can only be used in start position

error[E0433]: failed to resolve: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:108:26
   |
LL |         type B4 = crate::crate;
   |                          ^^^^^ `crate` in paths can only be used in start position

error[E0433]: failed to resolve: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:114:26
   |
LL |         type B5 = super::crate;
   |                          ^^^^^ `crate` in paths can only be used in start position

error[E0433]: failed to resolve: `crate` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:120:25
   |
LL |         type B6 = self::crate;
   |                         ^^^^^ `crate` in paths can only be used in start position

error[E0433]: failed to resolve: global paths cannot start with `super`
  --> $DIR/use-path-segment-kw.rs:134:21
   |
LL |         type C2 = ::super;
   |                     ^^^^^ global paths cannot start with `super`

error[E0433]: failed to resolve: `super` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:140:27
   |
LL |         type C3 = foobar::super;
   |                           ^^^^^ `super` in paths can only be used in start position

error[E0433]: failed to resolve: `super` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:146:26
   |
LL |         type C4 = crate::super;
   |                          ^^^^^ `super` in paths can only be used in start position

error[E0433]: failed to resolve: global paths cannot start with `self`
  --> $DIR/use-path-segment-kw.rs:172:21
   |
LL |         type D2 = ::self;
   |                     ^^^^ global paths cannot start with `self`

error[E0433]: failed to resolve: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:178:27
   |
LL |         type D3 = foobar::self;
   |                           ^^^^ `self` in paths can only be used in start position

error[E0433]: failed to resolve: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:184:26
   |
LL |         type D4 = crate::self;
   |                          ^^^^ `self` in paths can only be used in start position

error[E0433]: failed to resolve: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:191:26
   |
LL |         type D5 = super::self;
   |                          ^^^^ `self` in paths can only be used in start position

error[E0433]: failed to resolve: `self` in paths can only be used in start position
  --> $DIR/use-path-segment-kw.rs:198:25
   |
LL |         type D6 = self::self;
   |                         ^^^^ `self` in paths can only be used in start position

error: aborting due to 124 previous errors

Some errors have detailed explanations: E0429, E0433, E0573.
For more information about an error, try `rustc --explain E0429`.
